* [doc] fix users app layout bug

--- a/doc/themes/weex/source/css/index.scss
+++ b/doc/themes/weex/source/css/index.scss
@@ -48,7 +48,7 @@
 
 .horizon{
   .textbox {
-    flex: 2;
+    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
